appId: ${APP_ID}
---
- launchApp
- tapOn:
    text: "Wait"
    optional: true
- tapOn:
    text: "Close app"
    optional: true
- extendedWaitUntil:
    visible:
      id: "auth-email-input"
    timeout: 60000
- openLink: ${E2E_MOBILE_LOGIN_URL}
- waitForAnimationToEnd:
    timeout: 2000
- openLink: ${E2E_MOBILE_LOGIN_URL}
- extendedWaitUntil:
    visible:
      id: "nav-profile"
    timeout: 120000
