appId: ${APP_ID}
---
- launchApp
- tapOn:
    text: "Wait"
    optional: true
- waitForAnimationToEnd:
    timeout: 3000
- tapOn:
    text: "Wait"
    optional: true
- extendedWaitUntil:
    visible:
      id: "auth-email-input"
    timeout: 120000
- tapOn:
    id: "auth-email-input"
