appId: ${APP_ID}
---
- tapOn:
    text: "Wait"
    optional: true
- extendedWaitUntil:
    visible:
      id: "auth-password-input"
    timeout: 120000
- tapOn:
    id: "auth-password-input"
